<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/mainBackground"
        android:scaleType="centerCrop"
        android:src="@drawable/travel" />


    <TextView
        style="@style/TitleStyle"
        android:text="@string/mainTitle" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center"

        android:orientation="vertical">

        <TextView

            android:id="@+id/selectCountry"
            style="@style/CategoryStyle"
            android:background="@color/colorAccent"
            android:text="@string/selectCountry"
            android:textStyle="bold" />

        <TextView

            android:id="@+id/yourFavourite"
            style="@style/CategoryStyle"
            android:background="@color/brightYellow"
            android:text="@string/fav" />

        <TextView

            android:id="@+id/yourMemo"
            style="@style/CategoryStyle"
            android:background="@color/lightGreen3"
            android:text="@string/memo" />

        <TextView

            android:id="@+id/aboutUs"
            style="@style/CategoryStyle"
            android:background="@color/chocalateBrown"
            android:text="@string/about" />


    </LinearLayout>


</RelativeLayout>