<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".AboutUs">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/mainBackground"
        android:scaleType="centerCrop"
        android:src="@drawable/travel" />

    <TextView
        style="@style/TitleStyle"
        android:text="@string/about" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CategoryStyle"
            android:text="@string/about_content"
           />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/category_about_us"
            android:text="@string/about_developers"
            />


    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin = "@dimen/fab_margin"
        android:src="@drawable/home_icon_02"
        app:fabSize="normal"
        app:borderWidth="10dp"
        />

</RelativeLayout>