<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".countryDetails">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/titile">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TitleStyle"
            android:id="@+id/country_name"/>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/title"
        android:textAlignment="center"
        android:paddingTop="@dimen/display_space">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pop"
            style="@style/category_about_us" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            style="@style/category_about_us_details"
            android:layout_alignParentRight="true"
            android:id="@+id/population_view"/>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:paddingTop="@dimen/display_space">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capital"
            style="@style/category_about_us" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            style="@style/category_about_us_details"
            android:layout_alignParentRight="true"
            android:id="@+id/capital_view"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:paddingTop="@dimen/display_space">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cur"
            style="@style/category_about_us" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:hint="@string/capital"
            style="@style/category_about_us_details"
            android:layout_alignParentRight="true"
            android:id="@+id/currency_view"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:paddingTop="@dimen/display_space">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lang"
            style="@style/category_about_us" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            style="@style/category_about_us_details"
            android:layout_alignParentRight="true"
            android:id="@+id/language_view"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/display_space"
        android:textAlignment="center">

        <TextView
            style="@style/category_about_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city" />

        <TextView
            android:id="@+id/city_1_view"
            style="@style/category_about_us_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
             />

        <TextView
            android:id="@+id/city_2_view"
            style="@style/category_about_us_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:paddingTop="@dimen/double_display_space"
           />

        <TextView
            android:id="@+id/city_3_view"
            style="@style/category_about_us_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:paddingTop="@dimen/double_display_space"
            />

        <TextView
            android:id="@+id/city_4_view"
            style="@style/category_about_us_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:paddingTop="@dimen/double_display_space"
            />

    </RelativeLayout>


</LinearLayout>
